fixed header spacing issue

--- a/app/assets/stylesheets/friends_page.css
+++ b/app/assets/stylesheets/friends_page.css
@@ -1,5 +1,5 @@
 .friend-index-component-container {
-  height: 50vh;
+  min-height: 955px;
   width: 65vw;
   background-color: aliceblue;
 }
